# gfa

./: .gitignore  Program.cs  gfa.sln  main.yml
worker-rust/worker-rust/: Cargo.toml
worker-rust/worker-rust/openapi/: README.md
worker-rust/worker-rust/openapi/docs/: AbpApiDefinitionApi.md  AbpApplicationConfigurationApi.md  AbpTenantApi.md  AccountApi.md  ConfigApi.md  EmailSettingsApi.md  FeaturesApi.md  GfaWebConfigsConfigDto.md  GfaWebConfigsCreateUpdateConfigDto.md  GfaWebItemsCreateUpdateItemDto.md  GfaWebItemsItemDto.md  GfaWebPurchasesCreateUpdatePurchaseDto.md  GfaWebPurchasesCreateUpdatePurchaseItemDto.md  GfaWebPurchasesPurchaseDto.md  GfaWebPurchasesPurchaseGroup.md  GfaWebPurchasesPurchaseItemDto.md  GfaWebSalesCreateUpdateRawSaleDto.md  GfaWebSalesCreateUpdateRawSaleItemDto.md  GfaWebSalesCreateUpdateSaleDto.md  GfaWebSalesCreateUpdateSaleItemDto.md  GfaWebSalesRawSaleDto.md  GfaWebSalesRawSaleItemDto.md  GfaWebSalesSaleDto.md  GfaWebSalesSaleItemDto.md  GfaWebVendorsCreateUpdateVendorDto.md  GfaWebVendorsVendorDto.md  ItemApi.md  LoginApi.md  PermissionsApi.md  ProfileApi.md  PurchaseApi.md  PurchaseItemApi.md  RawSaleApi.md  RawSaleItemApi.md  RoleApi.md  SaleApi.md  SaleItemApi.md  TenantApi.md  UserApi.md  UserLookupApi.md  (+98 more)
worker-rust/worker-rust/sample/: BaseSales.json
worker-rust/worker-rust/src/: lib.rs  loader.rs  main.rs  staticvar.rs
worker-rust/worker-rust/src/api/: config_api.rs  mod.rs  sales_api.rs
worker-rust/worker-rust/src/models/: appconfig.rs  mod.rs  sales_model.rs  timer.rs
worker-rust/worker-rust/src/utils/: loader.rs  (+2 more)
(+526 files in other folders)
